--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+.body {
+  margin: auto;
   text-align: center;
+  font-family: 'Helvetica', sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  background-color: rgba(160, 207, 235, 1);
+  color: #002776;
+  max-width: 100%;
+  height: 100%;
+  overflow: scroll;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.submit-snaps {
+  font-size: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.snap-form {
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.title p {
+  font-size: 1rem;
+  font-style: italic;
+}
+
+.snap-form {
+  display: block;
+  margin: auto;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-width: 1000px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.snap-list {
+  margin: auto;
+  max-width: 1000px
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
